# dotxch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/actions/install/: action.yml
.github/workflows/: precommit.yml  run-test-suite.yml  super-linter.yml
resolver/: __init__.py  __main__.py
resolver/api/: api_client.py  api_server.py
resolver/cmds/: click_types.py  client_funcs.py  metadata.py  resolver.py  resolver_funcs.py
resolver/core/: client_funcs.py
resolver/drivers/: domain_driver.py  domain_info.py  domain_inner_driver.py  domain_inner_puzzle.py  domain_outer_driver.py  domain_outer_puzzle.py  domain_record.py  puzzle_class.py  puzzle_drivers.py  registration_fee_driver.py  registration_fee_puzzle.py
resolver/puzzles/: domain_constants.py  domain_inner.clsp  domain_inner.clsp.hex  domain_inner.clvm  domain_ph.clsp  domain_ph.clsp.hex  domain_ph.clvm  puzzles.py  registration_fee.clsp  registration_fee.clsp.hex  registration_fee.clvm
resolver/types/: domain_metadata.py  domain_record.py  puzzle_type.py  resolution_result.py  resolution_status_code.py
tests/: build-init-files.py  test_puzzles.py
